[gd_scene load_steps=3 format=3 uid="uid://bw6dblj2rpg4y"]

[ext_resource type="Script" path="res://scores.gd" id="1_awbxd"]
[ext_resource type="Texture2D" uid="uid://csteh8oma7tp6" path="res://PixelAdventure/Background/Pink.png" id="1_x4wli"]

[node name="Scores" type="Node2D"]
script = ExtResource("1_awbxd")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -84.0
offset_top = -38.0
offset_right = 1232.0
offset_bottom = 704.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_x4wli")
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
offset_left = 320.0
offset_top = 132.0
offset_right = 881.0
offset_bottom = 326.0

[node name="highest_label" type="Label" parent="Panel"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 40.0
offset_right = -1.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "Máximo Puntaje: 
Último Puntaje: "
horizontal_alignment = 1

[node name="RegresarMenu" type="Button" parent="."]
texture_filter = 1
offset_left = 442.0
offset_top = 377.0
offset_right = 765.0
offset_bottom = 450.0
theme_override_font_sizes/font_size = 20
text = "Menu principal"

[node name="Borrar" type="Button" parent="."]
texture_filter = 1
offset_left = 957.0
offset_top = 217.0
offset_right = 1087.0
offset_bottom = 248.0
text = "Borrar puntajes"

[connection signal="pressed" from="RegresarMenu" to="." method="_on_regresar_menu_pressed"]
[connection signal="pressed" from="Borrar" to="." method="_on_borrar_pressed"]
